# predictive-control

./: .dockerignore  .env.example  .gitattributes  .gitignore  404.html  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_FR.md  CONTRIBUTING.md  CONTRIBUTING_FR.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  CONTRIBUTOR_LICENSE_AGREEMENT_FR.md  Dockerfile  LICENSE.md  LICENSE_FR.md  README.md  index.html  markdown-page.html  package-lock.json  pyproject.toml  sitemap.xml
.agent/: README.md
.agent/rules/: gsd-constraints.md
.agent/workflows/: gsd-add-phase.md  gsd-add-todo.md  gsd-audit-milestone.md  gsd-check-todos.md  gsd-complete-milestone.md  gsd-debug.md  gsd-diagnose-issues.md  gsd-discovery-phase.md  gsd-discuss-phase.md  gsd-execute-phase.md  gsd-execute-plan.md  gsd-help.md  gsd-insert-phase.md  gsd-list-phase-assumptions.md  gsd-map-codebase.md  gsd-new-milestone.md  gsd-new-project.md  gsd-pause-work.md  gsd-plan-milestone-gaps.md  gsd-plan-phase.md  gsd-progress.md  gsd-quick.md  gsd-remove-phase.md  gsd-research-phase.md  gsd-resume-project.md  gsd-resume-work.md  gsd-set-profile.md  gsd-settings.md  gsd-transition.md  gsd-update.md  gsd-verify-phase.md  gsd-verify-work.md
assets/css/: styles.791e0eac.css
assets/js/: 0b371f3d.9c342bc3.js  0e384e19.26f900bc.js  1001.515021bc.js  1039.a9a595c1.js  149.a2b6d37e.js  165.755300e4.js  17896441.b816cf46.js  18e13d8c.972b23dc.js  1df93b7f.8f27d1d1.js  1f391b9e.ab661c89.js  2130.b8ead624.js  2334.1f921803.js  270da472.becd7a14.js  3219.e727b269.js  3624.d2efc140.js  375.fea09cc1.js  3834.7f565e47.js  393be207.2c4443ca.js  4250.a96e0437.js  (+53 more)
docs/: intro.html
license-analyzer/: README.md  analyzer.py  final_analysis.md  final_analysis_with_links.md  licenses.json  licenses.yaml  llm_link_extractor.py  llm_validator.py  local_analysis.md  references.md  run_first.ps1  run_second.ps1
src/: building_intelligence_connector.py
tests/: test_dummy.py
(+135 files in other folders)
