[project]
name = "power-limit"
version = "0.1.0"
description = "Executes the MPC optimization for the Cold Load Pickup problem."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.3",
    "cvxpy>=1.6.1",
    "requests>=2.32.3",
    "faststream[redis]>=0.5.34",
    "apscheduler>=3.11.0",
    "influxdb-client>=1.48.0",
    "pyyaml>=6.0.2",
    "pvlib>=0.11.0",
    "debugpy>=1.8.12",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cold_pickup_mpc"]
